beginning to restructure discussion on C1

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -153,22 +153,26 @@ My motivations here were also supported by experiences in P1 documented in my jo
 
 The resulted in a design challenge involved designing a bespoke  game authoring environment by adapting existing tools and embedding where possible affordances within that toolset to facilitate participants to address gaps in their knowledge without needing explicit instruction.
 
-This challenge was brought sharply into focus by a particular conflict experienced by one family in particular.
+Work needed to be done to address participant expectations of an acceptable scope for the game making project .
 
+This challenge was brought sharply into focus by a particular conflict experienced by one family in particular.
 
 #### The 3D flying bee
 
-I illustrate this conflict using the experience of one family who withdrew from P1 three weeks before the end of the programme. While members of this family were able to engage in planing via sketching on paper and in creating pixel art, in later stages they were reliant on others to implement code changes.
+One family in P1 chose not to continue with most other families after the Xmas break.
 
-I encouraged personal expression for the purposes of engagement and motivation.
+Members of this family had engaged in planning on paper and in particularly in creating pixel art, however tensions began to emerge when the introduced code framework framework did not support the desired features of one child. The feature they wanted to add to the game was bee design roaming a 3D landscape.  
 
-The freedom of choice and imagination allowed by designing on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next. A 3d bee design roaming a 3D landscape.  However, here it can lead to conflict and frustration as the desired changes of the child were not realistic to the technical scope of the project.
+in later stages they were reliant on others to implement code changes.
 
-I also addressed participant expectations of an acceptable project scope for our timeframe as a non technical process.
+When the family withdrew, they shared in feedback (see appendix 4.x) that at one point the family looked around and just saw people doing "hardcore coding" and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
+
+
+
+
 <!--
 When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
 
-When the family withdrew, they shared in feedback (see appendix 4.x) the moment that decided their withdrawal. that at one point they "looked around and just saw people doing hardcore coding and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
  <!-- namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. -->
 
@@ -190,31 +194,19 @@ When the family withdrew, they shared in feedback (see appendix 4.x) the moment 
 
 ### Using a starter game template
 
+The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
+
 The initial use of a working structural template was based on my previous experience of teaching javascript to novices [@chesterman_webmaking_2015].
 
 This template was synthesised from several tutorial to create a game of the _platformer_ genre  (see glossary), a move which helped to limit expectations of the technical complexity of their game.
 
-The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach.
+The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in the previous section had requested more hands on play and use of the tools of production before being called on to make creative decisions.
 
 By P2, learners first experience of the experience of the tools was in the process of playing an incomplete game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process. Due to an intentional fault, players needed to click a remix button, and alter the underlying code to progress in the game. The following section outlines responsive design process surrounding two main elements: the starting game code template and the code authoring toolset.
 
 
 I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online starter templates from several sources  to create a minimal template for a two-dimensional platformer game.
 
-**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
-
-A guiding principles of more recent constructionist design work is the facilitation of promoting community inspiration and interaction [Kafai etc]. In the Scratch community this is achieved through and extensive online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016].
-
-<!-- The shared community element on the other hand was quite different for glitch.com web playground tool due to its very mixed user base and range of different web based projects.  -->
-
-In this learning design I took a decision to not promote this online community as a source of inspiration and code bases. Instead one code base was promoted. This had the benefit of simplifying the process of supporting code errors, and promoting peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as one which was made in awareness of a tension between, freedom of community inspiration and practicalities of supporting complex coding errors.
-
-
-
-<!-- Sharing of ideas and inspiration did happen both on the playtesting of each others games and via incidental exposure to the online work of others. This happened as they shared log account details and thus when logging in to access their own work they would also see and have access to the code and graphical creations of others. I took advantage of this shared access in shared socThus  affordance ial and playful missions which are described later in this chapter. -->
-
-
-<!-- The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the domain of human-computer interaction (HCI) research. In particular, I explore the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].   -->
 
 **Structural design of the game template**
 
@@ -432,6 +424,13 @@ While block coding offers significant advantages (GL)in preventing syntax errors
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 <!-- #### Creation and migration of graphical and audio assets. -->
 
+### Other relevant discussion points related to the area of contradictions regarding tools
+
+#### Tension of a group remixing from one template rather than feeler community inspiration and interaction
+
+To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
+
+
 #### Distributed vs. self-contained approaches to asset creation
 
 A key element of game creation is the creation and management of graphical and audio assets. Many coding tools for novices provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets to facilitate and accelerate the creation of games and coding projects. While there are practical limits to the audio and graphical authoring capabilities of tools like Scratch [@payne2019music], such self-contained approached reduce possibility for compounding errors and complexity caused by the compatibility of file formats and migration and management of external asset files.
@@ -539,7 +538,7 @@ This theme of shielding from complexity is contained in all design choices detai
 
 <!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  --> -->
 
-### Observations on the game template and core tools
+### Observations and discussion on the game template and core tools
 
 <!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
 
@@ -557,14 +556,28 @@ design principles for “enjoyable” user interfaces (Malone, 1982).
 from [@bernhaupt_introduction_2015]
  -->
 
-The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making. Despite the relative simplicity of the highlighted affordances outlined above, complex and divergent patterns of design behaviour began to emerge. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. In addition, the use of revised in starter template in P2 allowed participants to maintain their games in a mainly working, shareable state allowing regular feedback from peers. The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. As explored above, the shift in template design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages.
+The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making.
 
-Despite these modifications, participants still needed help to access and use the relevant affordances in code template. In early trials with a limited number of families in late P1, I would point out the relevant part of the code and ask open questions e.g. '_I wonder what would happen if you changed that gravity variable?_' However, for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. In addition, participants soon began to ask how to make modifications to the game which needed additional code structures, a development signifying a pivot to the _create_ phase on the UMC model. The next section explores similar tensions related to the role of supporting resources and documentation.  
+
+Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
+
+Despite relative simplicity of the highlighted affordances, complex and divergent patterns of game design emerged. (evidence?)
+
+As explored above, the shift in template design from P1 to P2 involved a more structured approach in for participants in use and modify stages where key affordances were faciliated highlighted in the code design.
+
+This can be seen as a move from a design-build-test to a stepwise approach in the terms broadly explored by Denner et al. [@denner_does_2019].    
+
+As described above, this decision was based on journal observations and participant feedback  
+
+The use of revised in starter template in P2 allowed participants to maintain their games in a mainly working, shareable state allowing regular feedback from peers a process explored in later section and Chapter 7.
+
+SIGNPOST TO LATER FINDINGS HERE?
+
+Despite these modifications, participants still needed help to access and use the relevant affordances in code template. Supporting participants in making code changes was time consuming, particularly when participants wanted to make modifications to the game requiring additional code structures. My response was to turn to supporting documentation. Thus, the next section explores the role of supporting resources and documentation and resulting contractions that emerged.
+
+<!-- In early trials with a limited number of families in late P1, I would point out the relevant part of the code and ask open questions e.g. '_I wonder what would happen if you changed that gravity variable?_' -->
 
 <!-- My reflections as an facilitator are consistent with research showing the value of ongoing feedback in HCI and more domain specific research on showing the process of sharing creations are motivating thus. -->
-
-
-
 
 <!-- At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].    -->
 
