more on transition to docs

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -295,15 +295,6 @@ The process here began with me imagining what would be a good feature that playe
 background colour of the game
 game layout of the platforms - hazards and food to collect. -->
 
-#### Simple block graphics
-
-The use of blocks of text invited
-Their size of 32 x 32 was also design to reduce friction in teh creative process as this was the default size of Piskel.
-
-One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of many small technical alignments which addressed and helped resolve practical obstacles that participants experienced.
-
-NOTE - Make link with later section  
-
 #### Level design and prototyping
 
 **The use of a graphical grid structure to edit level design helped balance concerns of accessibility with the use of authentic code language.**
@@ -323,13 +314,23 @@ In P2, I revised the starting template to created game elements was based on a v
 ![](./Pictures/grid_editor_1.png){width=95%}
 Figure 4.x - Grid based editing of level design with a simple key for hazards, coins, and platforms.
 
-This solution abstracted away complexity of asset placement to prioritise ease of use to help sustain participant engagement. Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or could be left blank (see Figure 4.x above). The end result was that while participants altered a text-based array, the grid structure had a strong visual correlation with the resulting game layout.  This adaptation had a positive impact on engagement with level design in initial stages. Many participants spending significant time and effort undertaking many iterations of changes to the level design. In the vignette in appendix 4.x referenced above, Toby designed many levels making the game very challenging but still technically possible. Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in chapter five.
+This solution abstracted away complexity of asset placement to prioritise ease of use to help sustain participant engagement. Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or could be left blank (see Figure 4.x above). The end result was that while participants altered a text-based array, the grid structure had a strong visual correlation with the resulting game layout.  This adaptation had a positive impact on engagement with level design in initial stages. Many participants spending significant time and effort undertaking many iterations of changes to the level design.
+
+In the vignette in appendix 4.x, Toby designed many levels making the game very challenging but still technically possible. Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in chapter five.
 DEVELOP THIS SOMEHOW.
 
 Thus, here a technical approach helped resolve tension described above. Black boxing the process of adding assets via x,y coordinates and reducing repetitive process.
 
 
-<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
+#### Simple block graphics
+
+The use of blocks of text invited
+Their size of 32 x 32 was also design to reduce friction in the creative process as this was the default size of Piskel.
+
+One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of many small technical alignments which addressed and helped resolve practical obstacles that participants experienced.
+
+NOTE - INTEGRADE DISTRIBUTED ASSET CREATION AND NOT BLACK BOXING EXPORTING ETC AS A DIGITAL LITERACY SKILL.
+
 
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
@@ -360,6 +361,14 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
+
+
+### Other relevant discussion points related to the area of contradictions regarding tools
+
+#### Tension of a group remixing from one template rather than feeler community inspiration and interaction
+
+To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
+
 #### Design adaptations to facilitate novice use of a code playground
 
 <!-- Self-contained so many things set up by default,
@@ -388,15 +397,9 @@ These elements include steps to reducing syntax errors, shielding complexity, fa
 
 <!-- To address this I explore my own design decisions that and existing features of a code playground align with those key principles. -->
 
-
-
 <!-- NOTE - WHERE EXACTLY ARE THEY EXPLORED? -->
-
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-
-
 
 #### Addressing code syntax errors
 
@@ -424,14 +427,8 @@ While block coding offers significant advantages (GL)in preventing syntax errors
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 <!-- #### Creation and migration of graphical and audio assets. -->
 
-### Other relevant discussion points related to the area of contradictions regarding tools
 
-#### Tension of a group remixing from one template rather than feeler community inspiration and interaction
-
-To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
-
-
-#### Distributed vs. self-contained approaches to asset creation
+#### Distributed vs. self-contained approaches to asset creation - INTEGRATE IN GRAPHICS SECTION ABOVE
 
 A key element of game creation is the creation and management of graphical and audio assets. Many coding tools for novices provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets to facilitate and accelerate the creation of games and coding projects. While there are practical limits to the audio and graphical authoring capabilities of tools like Scratch [@payne2019music], such self-contained approached reduce possibility for compounding errors and complexity caused by the compatibility of file formats and migration and management of external asset files.
 
@@ -463,8 +460,6 @@ Despite this benefits, I was concerned that in P1 the diversity of asset creatio
 This tension can be described as a play paradox. WHERE IS THIS FIRST INTRODUCED I was looking to avoid too much time spent in asset creation at the expense of other processes which would develop coding concepts and practices. It also increased the possibility of peer learning as less tools were being used.
 
 ALSO NEEDED TO CHANGE DUE TO THE CHANGE IN GROUP WORK DESCRIBED LATER.
-
-
 
 ##### Use of Piskel
 
@@ -536,7 +531,7 @@ The process of adding a remix button, removes the needs for participants to copy
 
 This theme of shielding from complexity is contained in all design choices detailed above and in turn aligns with a constructionist design principle to 'choose black boxes carefully' [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. The decisions made in the design each tool shape the skills and concepts the end user is guided towards. While the principle here is applied to software tool use, it also applies to the use of a starter game template, as explored in the next section.
 
-<!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  --> -->
+<!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  -->
 
 ### Observations and discussion on the game template and core tools
 
@@ -558,7 +553,6 @@ from [@bernhaupt_introduction_2015]
 
 The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making.
 
-
 Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
 
 Despite relative simplicity of the highlighted affordances, complex and divergent patterns of game design emerged. (evidence?)
@@ -570,10 +564,13 @@ This can be seen as a move from a design-build-test to a stepwise approach in th
 As described above, this decision was based on journal observations and participant feedback  
 
 The use of revised in starter template in P2 allowed participants to maintain their games in a mainly working, shareable state allowing regular feedback from peers a process explored in later section and Chapter 7.
-
 SIGNPOST TO LATER FINDINGS HERE?
 
-Despite these modifications, participants still needed help to access and use the relevant affordances in code template. Supporting participants in making code changes was time consuming, particularly when participants wanted to make modifications to the game requiring additional code structures. My response was to turn to supporting documentation. Thus, the next section explores the role of supporting resources and documentation and resulting contractions that emerged.
+The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the design decisions made in creating a Microworld environment. DEVELOP THIS WITH LAURILARD AND RESNICKS THEORY.
+
+My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.  
+
+With the modifications to the template in place, participants still only minimal support to find use the key affordances in to make impactful game changes. Simple card prompts were introduced to do help accelerate the process to facilitate working with large groups. Supporting participants in adding new game features changes was more time consuming, particularly when participants wanted to make modifications to the game requiring additional code structures. My response was to turn to more extensive documentation. The next section explores the role of supporting resources and documentation and resulting contractions that emerged.
 
 <!-- In early trials with a limited number of families in late P1, I would point out the relevant part of the code and ask open questions e.g. '_I wonder what would happen if you changed that gravity variable?_' -->
 
